 Call wm_get_hw_control() correctly. This change fixes a bug that some AMT based systems doesn't linkup at 1000BaseT. The problem was observed on HP Compaq dc7700.

A lot of fixes have been done to wm(4) and igphy(4). Now PR#44893 should be
fixed.